--- a/FodboldApp/FodboldApp/FodboldApp/View/Matches.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/Matches.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:usercontrols="clr-namespace:FodboldApp.View.UserControl"
+             xmlns:xamltemp="clr-namespace:FodboldApp.View.XamlTemplate"
              xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions"
              xmlns:viewmodels="clr-namespace:FodboldApp.ViewModel"
              xmlns:flv="clr-namespace:DLToolkit.Forms.Controls;assembly=DLToolkit.Forms.Controls.FlowListView"
@@ -15,7 +15,7 @@
                 <viewmodels:MatchesVM/>
             </StackLayout.BindingContext>
 
-            <usercontrols:MatchHeaderUC/>
+            <xamltemp:MatchHeaderTemplate/>
 
             <Label Text="SENESTE RESULTATER"
                    TextColor="{StaticResource textColor}"
