--- a/FodboldApp/FodboldApp/FodboldApp/View/History.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/History.xaml
@@ -68,6 +68,9 @@
                     <BoxView Color="White" Grid.Column="0" Grid.RowSpan="1"/>
                     <Image Source="tidligere_kampe.png" Grid.Row="0"/>
                     <Label Text="Tidligere kampe" FontSize="Medium" TextColor="{StaticResource textColor}" HorizontalOptions="Center" Grid.Row="1" Grid.Column="0" VerticalOptions="Start"/>
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding TempCommand}"/>
+                    </Grid.GestureRecognizers>
                 </Grid>
                 <!--===============================================================-->
 
