Google sign in fully implemented for Android. Sign out functionality doesn't work for iOS. Comment field for matches is implemented, but the label doesn't dissapear nor does it add new comments to the UI list, when written in the UI.

--- a/FodboldApp/FodboldApp/FodboldApp/View/Login.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/Login.xaml
@@ -4,8 +4,13 @@
              x:Class="FodboldApp.View.Login">
     <ContentPage.Content>
         <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
-            <Image Source="facebook_icon.png" HorizontalOptions="Start" VerticalOptions="Center"/>
-            <Image Source="google_plus_icon" HorizontalOptions="End" VerticalOptions="Center"/>
+            <Image Source="facebook_icon.png" HorizontalOptions="Start" VerticalOptions="Center">
+            </Image>
+            <Image Source="google_plus_icon" HorizontalOptions="End" VerticalOptions="Center">
+                <Image.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding GooglePlusLoginCommand}"/>
+                </Image.GestureRecognizers>
+            </Image>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
