--- a/FodboldApp/FodboldApp/FodboldApp/View/HistoricalStandings.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/HistoricalStandings.xaml
@@ -2,13 +2,13 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FodboldApp.View.HistoricalStandings"
-             xmlns:local="clr-namespace:FodboldApp.View.Converter" 
+             xmlns:converter="clr-namespace:FodboldApp.View.Converter" 
              xmlns:viewmodels="clr-namespace:FodboldApp.ViewModel"
              xmlns:flv="clr-namespace:DLToolkit.Forms.Controls;assembly=DLToolkit.Forms.Controls.FlowListView">
 
     <ContentPage.Resources>
         <ResourceDictionary>
-            <local:SelectedItemColorConverter x:Key="colorConvert"/>
+            <converter:SelectedItemColorConverter x:Key="colorConvert"/>
         </ResourceDictionary>
     </ContentPage.Resources>
 
