--- a/FodboldApp/FodboldApp/FodboldApp/View/MatchPage.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/MatchPage.xaml
@@ -76,30 +76,55 @@ xmlns:cv="clr-namespace:Xamarin.Forms;assembly=Xamarin.Forms.CarouselView"
                                     </flv:FlowListView.FlowColumnTemplate>
                                 </flv:FlowListView>
 
-                                <flv:FlowListView x:Name="flowListView2" FlowColumnCount="1" BackgroundColor="White"
+                                <Grid Grid.Row="0">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="4*"/>
+                                        <RowDefinition Height="1*"/>
+                                    </Grid.RowDefinitions>
+                                    <flv:FlowListView x:Name="flowListView2" FlowColumnCount="1" BackgroundColor="White"
                                   HasUnevenRows="True" HeightRequest="180" IsVisible="{Binding ListSwitch, Converter={StaticResource booleanReverser}}" Grid.Row="0"
                                   FlowItemsSource="{Binding CollectionList}" SeparatorVisibility="Default" SeparatorColor="Black">
-                                    <flv:FlowListView.FlowColumnTemplate>
-                                        <DataTemplate>
-                                            <Grid RowSpacing="5">
-                                                <Grid.RowDefinitions>
-                                                    <RowDefinition Height="*"/>
-                                                    <RowDefinition Height="*"/>
-                                                </Grid.RowDefinitions>
-                                                <Grid.ColumnDefinitions>
-                                                    <ColumnDefinition Width="2.5*"/>
-                                                    <ColumnDefinition Width="20*"/>
-                                                </Grid.ColumnDefinitions>
-                                                <Image Source="{Binding ImageURL}" HorizontalOptions="Start" 
+                                        <flv:FlowListView.FlowColumnTemplate>
+                                            <DataTemplate>
+                                                <Grid RowSpacing="5">
+                                                    <Grid.RowDefinitions>
+                                                        <RowDefinition Height="*"/>
+                                                        <RowDefinition Height="*"/>
+                                                    </Grid.RowDefinitions>
+                                                    <Grid.ColumnDefinitions>
+                                                        <ColumnDefinition Width="2.5*"/>
+                                                        <ColumnDefinition Width="20*"/>
+                                                    </Grid.ColumnDefinitions>
+                                                    <Image Source="{Binding ImageURL}" HorizontalOptions="Start" 
                                        Grid.Row="0" Grid.Column="0" Aspect="AspectFit" Margin="0,10,0,0" VerticalOptions="Start"/>
-                                                <Label Text="{Binding UserName}" Grid.Row="0" Grid.Column="1" VerticalOptions="Start" 
+                                                    <Label Text="{Binding UserName}" Grid.Row="0" Grid.Column="1" VerticalOptions="Start" 
                                        HorizontalOptions="Start" FontSize="Medium" FontAttributes="Bold" HorizontalTextAlignment="Start" Margin="0,10,0,5" />
-                                                <Label Text="{Binding UserComment}" Grid.Row="1" Grid.Column="0" VerticalOptions="Start" 
+                                                    <Label Text="{Binding UserComment}" Grid.Row="1" Grid.Column="0" VerticalOptions="Start" 
                                        HorizontalOptions="StartAndExpand" FontSize="Medium" HorizontalTextAlignment="Start" Grid.ColumnSpan="2" Margin="0,0,0,10" />
-                                            </Grid>
-                                        </DataTemplate>
-                                    </flv:FlowListView.FlowColumnTemplate>
-                                </flv:FlowListView>
+                                                </Grid>
+                                            </DataTemplate>
+                                        </flv:FlowListView.FlowColumnTemplate>
+                                    </flv:FlowListView>
+                                    <Grid Grid.Row="1" IsVisible="{Binding ListSwitch, Converter={StaticResource booleanReverser}}">
+                                        <Editor Text="{Binding UserComment, Mode=TwoWay}"
+                                                HorizontalOptions="FillAndExpand">
+                                            <Editor.BindingContext>
+                                                <viewModel:MatchPageVM/>
+                                            </Editor.BindingContext>
+                                        </Editor>
+                                        <Label Text="Skriv en kommentar" 
+                                                HorizontalOptions="StartAndExpand" IsVisible="{Binding LabelIsVisible}" InputTransparent="True">
+                                            <Label.BindingContext>
+                                                <viewModel:MatchPageVM/>
+                                            </Label.BindingContext>
+                                        </Label>
+                                        <Button Text="Send" HorizontalOptions="End" Command="{Binding SendCommentCommand}" VerticalOptions="Center">
+                                            <Button.BindingContext>
+                                                <viewModel:MatchPageVM/>
+                                            </Button.BindingContext>
+                                        </Button>
+                                    </Grid>
+                                </Grid>
                             </Grid>
                         </DataTemplate>
                     </cv:CarouselView.ItemTemplate>
