--- a/FodboldApp/FodboldApp/FodboldApp/App.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/App.xaml
@@ -29,7 +29,7 @@
 
             <ControlTemplate x:Key="MainPageTemplate">
 
-                <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" ColumnSpacing="0" RowSpacing="0">
+                <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" ColumnSpacing="0" RowSpacing="0" BindingContext="{x:Static viewmodels:ViewModelLocator.HeaderVM}">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="50"/>
                         <RowDefinition Height="*"/>
@@ -60,7 +60,7 @@
                             <!-- Header content -->
                             <controls:TintedImage Source="backbutton.png"  WidthRequest="40" TintColor="#D0D0D0" Grid.Column="0">
                                 <StackLayout.GestureRecognizers>
-                                    <TapGestureRecognizer Tapped="OnBackButtonPressed"/>
+                                    <TapGestureRecognizer Command="{Binding OnBackButtonTapped}"/>
                                 </StackLayout.GestureRecognizers>
                             </controls:TintedImage>
 
@@ -83,7 +83,7 @@
                            Margin="10, 0, 0, 0 "
                                    Grid.Column="2">
                                 <Label.GestureRecognizers>
-                                    <TapGestureRecognizer Tapped="Login"/>
+                                    <TapGestureRecognizer Command="{Binding LoginCommand}"/>
                                 </Label.GestureRecognizers>
                             </Label>
                         </Grid>
