--- a/FodboldApp/FodboldApp/FodboldApp/View/Chat.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/Chat.xaml
@@ -11,6 +11,7 @@
         <ResourceDictionary>
             <local:ChatLayoutConverter x:Key="layoutConvert"/>
             <local:TextAllignmentConverter x:Key="textAllignmentConvert"/>
+            <local:ChatBubbleColorConverter x:Key="bubbleColorConvert"/>
         </ResourceDictionary>
     </ContentPage.Resources>
     
@@ -30,7 +31,7 @@
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="40"/>
                             </Grid.ColumnDefinitions>
-                            <abstractions:RoundedBoxView BackgroundColor="Blue" CornerRadius="10" Grid.Column="{Binding Admin, Converter={StaticResource layoutConvert}}"/>
+                            <abstractions:RoundedBoxView BackgroundColor="{Binding Admin, Converter={StaticResource bubbleColorConvert}}" CornerRadius="15" Grid.Column="{Binding Admin, Converter={StaticResource layoutConvert}}"/>
                             <Label Text="{Binding Content}" VerticalTextAlignment="Center" HorizontalTextAlignment="{Binding Admin, Converter={StaticResource textAllignmentConvert}}" Margin="10, 10, 10, 10" Grid.Column="{Binding Admin, Converter={StaticResource layoutConvert}}"/>
                             <Image Source="icon" IsVisible="{Binding Admin}" Grid.Column="2"/>
                         </Grid>
