Added arrow that shows which way one can swipe

--- a/FodboldApp/FodboldApp/FodboldApp/View/MatchPage.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/MatchPage.xaml
@@ -45,7 +45,7 @@ xmlns:cv="clr-namespace:CarouselView.FormsPlugin.Abstractions;assembly=CarouselV
                 <Grid.BindingContext>
                     <viewModel:MatchPageVM/>
                 </Grid.BindingContext>
-                <cv:CarouselViewControl ItemsSource="{Binding CollectionList}">
+                <cv:CarouselViewControl ItemsSource="{Binding CollectionList}" ShowArrows="True">
                     <cv:CarouselViewControl.ItemTemplate>
                         <DataTemplate>
                             <Grid>
