--- a/FodboldApp/FodboldApp/FodboldApp/View/Chat.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/Chat.xaml
@@ -38,6 +38,10 @@
                     </DataTemplate>
                 </flv:FlowListView.FlowColumnTemplate>
             </flv:FlowListView>
+            <StackLayout Orientation="Horizontal">
+                <Editor Text="{Binding UserChatMessage}" IsVisible="{Binding IsEditorVisible}"/>
+                <Button Command="{Binding ChatCommand}">Send</Button>
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
