--- a/FodboldApp/FodboldApp/FodboldApp/View/MatchPage.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/MatchPage.xaml
@@ -71,8 +71,8 @@ xmlns:cv="clr-namespace:CarouselView.FormsPlugin.Abstractions;assembly=CarouselV
 
                                 <Grid Grid.Row="0">
                                     <Grid.RowDefinitions>
-                                        <RowDefinition Height="4*"/>
-                                        <RowDefinition Height="1*"/>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="50"/>
                                     </Grid.RowDefinitions>
                                     <flv:FlowListView x:Name="flowListView2" FlowColumnCount="1" BackgroundColor="White"
                                   HasUnevenRows="True" HeightRequest="180" IsVisible="{Binding ListSwitch, Converter={StaticResource booleanReverser}}" Grid.Row="0"
@@ -98,18 +98,20 @@ xmlns:cv="clr-namespace:CarouselView.FormsPlugin.Abstractions;assembly=CarouselV
                                             </DataTemplate>
                                         </flv:FlowListView.FlowColumnTemplate>
                                     </flv:FlowListView>
-                                    <Grid Grid.Row="1" IsVisible="{Binding ListSwitch, Converter={StaticResource booleanReverser}}">
-                                        <Editor Text="{Binding UserComment, Mode=TwoWay}"
+                                    <StackLayout Grid.Row="1" IsVisible="{Binding ListSwitch, Converter={StaticResource booleanReverser}}" >
+                                        <Grid IsVisible="{Binding EditorIsVisible}" BindingContext="{x:Static viewmodels:ViewModelLocator.MatchPageVM}">
+                                            <Editor Text="{Binding UserComment, Mode=TwoWay}"
                                                 HorizontalOptions="FillAndExpand"
                                                 BindingContext="{x:Static viewmodels:ViewModelLocator.MatchPageVM}">
-                                        </Editor>
-                                        <Label Text="Skriv en kommentar" 
+                                            </Editor>
+                                            <Label Text="Skriv en kommentar" Margin="0,10,0,0"
                                                HorizontalOptions="StartAndExpand" IsVisible="{Binding LabelIsVisible}" InputTransparent="True"
                                                BindingContext="{x:Static viewmodels:ViewModelLocator.MatchPageVM}">
-                                        </Label>
-                                        <Button Text="Send" HorizontalOptions="End" Command="{Binding SendCommentCommand}" VerticalOptions="Center" BindingContext="{x:Static viewmodels:ViewModelLocator.MatchPageVM}">
-                                        </Button>
-                                    </Grid>
+                                            </Label>
+                                            <Button Text="Send" HorizontalOptions="End" Command="{Binding SendCommentCommand}" VerticalOptions="Center" BindingContext="{x:Static viewmodels:ViewModelLocator.MatchPageVM}">
+                                            </Button>
+                                        </Grid>
+                                    </StackLayout>
                                 </Grid>
                             </Grid>
                         </DataTemplate>
