--- a/FodboldApp/FodboldApp/FodboldApp/View/Chat.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/Chat.xaml
@@ -17,21 +17,21 @@
     
     
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout HorizontalOptions="FillAndExpand">
             <StackLayout.BindingContext>
                 <viewmodels:ChatVM/>
             </StackLayout.BindingContext>
-            <flv:FlowListView x:Name="flowListView" FlowColumnCount="1" SeparatorVisibility="None" HasUnevenRows="True" 
+            <flv:FlowListView x:Name="flowListView" FlowColumnCount="1" SeparatorVisibility="None" HasUnevenRows="True" HorizontalOptions="FillAndExpand"
 			   FlowItemsSource="{Binding ChatList}">
                 <flv:FlowListView.FlowColumnTemplate>
                     <DataTemplate>
-                        <Grid Margin="10, 10, 10, 10">
+                        <Grid Margin="10, 10, 10, 10" HorizontalOptions="FillAndExpand">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="40"/>
                             </Grid.ColumnDefinitions>
-                            <abstractions:RoundedBoxView BackgroundColor="{Binding Admin, Converter={StaticResource bubbleColorConvert}}" CornerRadius="15" Grid.Column="{Binding Admin, Converter={StaticResource layoutConvert}}"/>
+                            <abstractions:RoundedBoxView BackgroundColor="{Binding Admin, Converter={StaticResource bubbleColorConvert}}" CornerRadius="25" Grid.Column="{Binding Admin, Converter={StaticResource layoutConvert}}" MinimumHeightRequest="50"/>
                             <Label Text="{Binding Content}" VerticalTextAlignment="Center" HorizontalTextAlignment="{Binding Admin, Converter={StaticResource textAllignmentConvert}}" Margin="10, 10, 10, 10" Grid.Column="{Binding Admin, Converter={StaticResource layoutConvert}}"/>
                             <Image Source="icon" IsVisible="{Binding Admin}" Grid.Column="2"/>
                         </Grid>
