Facebook and Google login is fully implemented with autologin too. We retrieve, on login, the user's name,

--- a/FodboldApp/FodboldApp/FodboldApp/App.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/App.xaml
@@ -96,7 +96,7 @@
                            Margin="10, 0, 0, 0 "
                                    Grid.Column="2">
                             <Label.GestureRecognizers>
-                                <TapGestureRecognizer Tapped="LoginOut"/>
+                                <TapGestureRecognizer Tapped="LogOut"/>
                             </Label.GestureRecognizers>
                         </Label>
                     </Grid>
