--- a/FodboldApp/FodboldApp/FodboldApp/View/Matches.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/Matches.xaml
@@ -42,7 +42,7 @@
                    HorizontalTextAlignment="Center"
                    BackgroundColor="#ffffff"
                    Margin="0, 0, 0, 0"/>
-                            <Label Text="{Binding Score}"
+                            <Label Text="{Binding Scores}"
                    TextColor="{StaticResource textColor}"
                    FontSize="80"
                    HorizontalOptions="FillAndExpand"
